# gnome-flip-screen

./: README.md  autogen.sh  configure.ac
src/: Makefile.am  gnome-flip-screen.c
